// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox@desktop client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@desktop client environment должен проставить в label произвольный tsx (snapshot) 1`] = `
<span
  class="Checkbox"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-xuniq-0-1"
      autocomplete="off"
      class="Checkbox-Control"
      id="xuniq-0-1"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
  <label
    aria-hidden="true"
    class="Checkbox-Label"
    for="xuniq-0-1"
    id="label-xuniq-0-1"
  >
    <div
      class="custom"
    >
      content
    </div>
  </label>
</span>
`;

exports[`Checkbox@desktop server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-pad client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-pad client environment должен проставить в label произвольный tsx (snapshot) 1`] = `
<span
  class="Checkbox"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-xuniq-0-9"
      autocomplete="off"
      class="Checkbox-Control"
      id="xuniq-0-9"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
  <label
    aria-hidden="true"
    class="Checkbox-Label"
    for="xuniq-0-9"
    id="label-xuniq-0-9"
  >
    <div
      class="custom"
    >
      content
    </div>
  </label>
</span>
`;

exports[`Checkbox@touch-pad server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-phone client environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-clientTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="clientTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;

exports[`Checkbox@touch-phone client environment должен проставить в label произвольный tsx (snapshot) 1`] = `
<span
  class="Checkbox"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-xuniq-0-17"
      autocomplete="off"
      class="Checkbox-Control"
      id="xuniq-0-17"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
  <label
    aria-hidden="true"
    class="Checkbox-Label"
    for="xuniq-0-17"
    id="label-xuniq-0-17"
  >
    <div
      class="custom"
    >
      content
    </div>
  </label>
</span>
`;

exports[`Checkbox@touch-phone server environment должен вернуть полный шаблон компонента (snapshot) 1`] = `
<span
  class="Checkbox mix"
>
  <span
    class="Checkbox-Box"
  >
    <input
      aria-labelledby="label-serverTemplateId"
      autocomplete="off"
      class="Checkbox-Control"
      id="serverTemplateId"
      type="checkbox"
    />
    <span
      class="Checkbox-Tick"
    >
      <span
        aria-hidden="true"
        class="Icon Icon_hasGlyph Icon_glyph_type-tick"
      >
        <svg
          height="10"
          viewBox="0 0 14 10"
          width="14"
        >
          <path
            d="M1.49 4.885l1.644-1.644 4.385 4.385L5.874 9.27 1.49 4.885zm4.384 1.096L11.356.5 13 2.144 7.519 7.626 5.874 5.98v.001z"
          />
        </svg>
      </span>
    </span>
  </span>
</span>
`;
